--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>Quadruped_v2</name>
+  <name>quadruped_v2</name>
   <version>2.0.0</version>
   <description>Quadruped Gait Simulation and Path Tracking</description>
 
